# pydefmon

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
design/: dump_to_defmon_layer1_design.md  dump_to_defmon_slides_design.md
docs/: SPEC.md  format.md  usage.md
fixtures/: glow_worm.csv  glow_worm.prg  glow_worm.recon.baseline.csv  glow_worm.recon.baseline.prg
profile/: audit_csv_reachability.py  dump_to_defmon_recall.py  glow_worm_layer1_audit.py  glow_worm_slide_audit.py
pydefmon/: __init__.py  _goto80_format.py  _load_format.py  _sid_format.py  cli.py  defmon.py  defmon_player.py  dump_to_defmon.py  format.py  reglog.py
pydefmon/data/: defmon_template.prg
tests/: test_cli.py  test_cutoff_slide_model.py  test_defmon.py  test_defmon_layer1_model.py  test_defmon_player_portamento.py  test_defmon_slides_model.py  test_dump_to_defmon_round_trip.py  test_format.py  test_goto80_oracle.py  test_hvsc_sid_corpus.py  test_lint.py  test_oracle_hvsc.py  test_player.py  test_pysidtracker_base.py  test_reglog.py  test_runtime_state.py  test_sid_replay.py
tests/_support/: __init__.py  defmon_corpus.txt  py65_oracle.py
tests/integration/: test_player_vs_real.py
tools/: fetch_fixtures.py  run_dump_to_defmon_round_trip.sh
